[project]
name = "cmore-replay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boxmot==17.0.0",
    "ipykernel>=7.1.0",
    "matplot>=0.1.9",
    "mediapipe==0.10.14",
    "opencv-contrib-python>=4.12.0.88",
    "pandas>=2.3.3",
    "supervision>=0.27.0.post2",
]
